fixes component collisions on mobile

--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -59,6 +59,9 @@ li {
 }
 
 .c-checkout {
+	@media (max-width: $break-medium) {
+		width: 100%;
+	}
 	width: 400px;
 	background: #fff;
 	position: fixed;
